# DOS2Bandnet

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
dos2bandnet/: __init__.py  model.py  preprocessing.py  train_core.py  wandb_runner.py
scripts/: forward.py  preprocessing.py  test.py  train.py  train_wandb.py
