[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dos2bandnet"              
version = "0.1.0"                 
description = "Unfolded band structure prediction with dos2bandnet"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
  "pymatgen",
  "tqdm",
]

[tool.setuptools]
packages = ["dos2bandnet"]
